[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
serde_json = "1.0.94"
serde = {version="1.0.158", features=['derive']}
arboard = "3.2.0"
